更新Kotlin版本至2.1.20，移除net.sf.json依赖并替换为org.json，优化代码结构